<?xml version="1.0"?>
<package format="3">
  <name>my_robot_project</name>
  <version>0.1.0</version>
  <description>ROS2 project to visualize robot with LIDAR and obstacles in RViz</description>
  <maintainer email="jyoti@example.com">Jyoti Paswan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>pytest</test_depend>
</package>
